# safecat

./: CHANGES  COPYING  INSTALL  Makefile  README  README.md  TARGETS  buffer.h  conf-cc  conf-root  conf-version  error.h  error.h1  error.h2  error_no.h.in  error_str.c  fmt.h  fmt_uint64.c  hassgact.h.in  hier.c  hostname.c  hostname.h  maildir.1  maildir.sh  make-compile.sh  meson.build  safecat-buildroot.patch  safecat.1  safecat.c  safecat.spec  sig.c  sig.h  stat_dir.c  stat_dir.h  strcat_alloc.c  strcat_alloc.h  strerr_die.c  tai.h  taia_now.c  tempfile.c  (+7 more)
.github/workflows/: build.yml
